동시성 고려 안된 테스트

--- a/stock-concurrency/src/main/resources/application.yml
+++ b/stock-concurrency/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306?useSSL=false&serverTimezone=UTC
-    username: ${USERNAME}
-    password: ${PASSWORD}
+    url: jdbc:mysql://localhost:3305/stock?useSSL=false&serverTimezone=UTC
+    username: root
+    password: root
 
   jpa:
     database: mysql
