--- a/stock-concurrency/src/main/resources/application.yml
+++ b/stock-concurrency/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3305/stock?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3305/stock?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
     username: root
     password: root
 
