--- a/stock-concurrency/src/main/resources/application.yml
+++ b/stock-concurrency/src/main/resources/application.yml
@@ -4,6 +4,9 @@ spring:
     url: jdbc:mysql://localhost:3305/stock?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
     username: root
     password: root
+    hikari:
+      max-lifetime: 600000
+      maximum-pool-size: 40
 
   jpa:
     database: mysql
@@ -13,5 +16,11 @@ spring:
     open-in-view: false
     properties:
       hibernate:
-        show_sql: false
-        format_sql: false
+        show_sql: true
+        format_sql: true
+
+logging:
+  level:
+    org:
+      hibernate:
+        type: trace
