--- a/spring-sse-with-redis/src/main/resources/application.yml
+++ b/spring-sse-with-redis/src/main/resources/application.yml
@@ -1,1 +1,19 @@
-spring.application.name=spring-sse-with-redis
+spring:
+  application:
+    name: spring-sse-with-redis
+
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3305/sse?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
+    username: root
+    password: root
+
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        format_sql: true
+        default_batch_fetch_size: 1000
+        dialect: org.hibernate.dialect.MySQL8Dialect
+    open-in-view: false
